[tool.poetry]
name = "caqtus-devices-imaging-source"
version = "1.5.1"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
packages = [{include = "caqtus_devices"}]

[tool.poetry.dependencies]
python = "^3.12, <3.13"

caqtus = { git = "https://github.com/light-scattering-io/caqtus.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
