[tool.poetry]
name = "caqtus-devices-imaging-source"
version = "1.8.1"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
packages = [{include = "caqtus_devices"}]

[tool.poetry.dependencies]
python = "^3.12, <3.13"

caqtus-suite = ">=5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
