[project]
name = "caqtus-devices-imaging-source"
version = "1.10.0"
description = "Add your description here"
authors = ["<lecaqtus66@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caqtus-suite>=6.18.1",
    "pyside6>=6.8.1,!=6.8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"