[tool.poetry]
name = "caqtus-devices-ni6738-analog-card"
version = "1.5.2"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
packages = [{ include = "caqtus_devices" }]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

nidaqmx = ">=0.9.0"
caqtus-suite = "^4.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
