[tool.poetry]
name = "caqtus-devices-orca-quest"
version = "2.3.0"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
packages = [{include = "caqtus_devices"}]

[tool.poetry.dependencies]
python = "^3.12, <3.13"

caqtus-suite = ">=6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
