[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caqtus-devices-orca-quest"
dynamic = ["version"]
description = "Contains the caqtus device extension for the Hamamatsu Orca Quest camera."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "license.md" }
keywords = []
authors = [
    { name = "light-scattering-io", email = "lecaqtus66@gmail.com" },
]

dependencies = [
    "caqtus-suite>=6.9.0",
]

[tool.hatch.version]
path = "caqtus_devices/orca_quest/__about__.py"
