[tool.poetry]
name = "caqtus-devices-siglent-sdg6022x"
version = "2.2.0"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
packages = [{include = "caqtus_devices"}]

[tool.poetry.dependencies]
python = "^3.12, <3.13"
caqtus = {git = "https://github.com/light-scattering-io/caqtus.git"}
pyvisa = "^1.14.1"
attrs = "^23.2.0"
cattrs = "^23.2.3"


[tool.poetry.group.test.dependencies]
pytest-qt = "^4.4.0"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pyright = "^1.1.369"
mypy = "^1.10.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
enable_incomplete_feature = "NewGenericSyntax"
