[tool.poetry]
name = "caqtus-devices-spincore-pulse-blaster"
version = "1.10.0"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
packages = [{include = "caqtus_devices"}]

[tool.poetry.dependencies]
python = "^3.12, <3.13"

caqtus-suite = ">=5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
