[tool.poetry]
name = "caqtus-devices-swabian-pulse-streamer"
version = "1.6.1"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
packages = [{include = "caqtus_devices"}]

[tool.poetry.dependencies]
python = "^3.11, <3.13"

pulsestreamer = ">=1.7.0"

caqtus = { git = "https://github.com/light-scattering-io/caqtus.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
