[project]
name = "caqtus-devices-{{ cookiecutter.device_module.replace('_', '-').replace('.', '-') }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
license = { file = "license.md" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caqtus-suite>=6.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caqtus_devices"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
